v4(60%)